--- a/layers/+lang/clojure/README.org
+++ b/layers/+lang/clojure/README.org
@@ -200,7 +200,7 @@ As this state works the same for all files, the documentation is in global
 
 | Key Binding | Description                    |
 |-------------+--------------------------------|
-| ~SPC m d r~ | reload namepspaces             |
+| ~SPC m d r~ | reload namespaces             |
 | ~SPC m d b~ | instrument expression at point |
 | ~SPC m d e~ | display last stacktrace        |
 | ~SPC m d i~ | inspect expression at point    |
